Self_Paced_Exercices/Traffic_Management/Gateway_non_wildcarrd_Host/answer/VirtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: spongebob-reply
  namespace: default
spec:
  gateways:
  - "istio-ingress/patrick-star-gw"
  hosts:
  - '*'
  http:
  - name: "hardcoded_reply"
    directResponse:
      status: 200
      body:
        string: "<h1>Sponge Bob</h1>"
